--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <div class="w3-card-4 w3-margin w3-white">
     <img src="../img/1.jpg" alt="Nature" style="width:100%">
     <div class="w3-container">
-      <h3><b>TITLE HEADING</b></h3>
-      <h5>Title description, <span class="w3-opacity">April 7, 2014</span></h5>
+      <h3><b></b></h3>
+      <h5>Title description, <span class="w3-opacity"></span></h5>
     </div>
 
     <div class="w3-container">
-      <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed
-        tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <p></p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
           <!--<p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>-->
@@ -76,7 +75,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <img src="../img/wpp.jpg" style="width:100%">
     <div class="w3-container w3-white">
       <h4><b>Quem sou eu?</b></h4>
-      <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
+      <p>Apenas eu, eu e eu, explorando o universo do desconhecimento. Tenho um coração de amor e um interesse no blog . Quero compartilhar meu mundo com voce.</p>
     </div>
   </div><hr>
   
@@ -124,11 +123,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   </div>
   
 </div>
-
 </div><br>
-
 </div>
-
 <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
   <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
   <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
