--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <img src="../img/1.jpg" alt="Nature" style="width:100%">
     <div class="w3-container">
       <h3><b></b></h3>
-      <h5>Title description, <span class="w3-opacity"></span></h5>
+      <h5>Novos posts em breve...<span class="w3-opacity"></span></h5>
     </div>
 
     <div class="w3-container">
