--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       </div>
     </div>
   </div>
+  
+  <div class="w3-container">
+      <p>Após assistirmos as aula de LIP e obtermos os meios para a criação de projetos(em conjunto com o projeto <a href="https://www.projectguts.org/" style="color:blue">GUTS</a>), fomos desafiados a criar um jogo FPAG utilizando a plataforma do <a href="https://www.slnova.org/" style="color:blue">SLNova</a>. Aceitamos o desafio e caimos dentro para realizar a tarefa. Decidimos criar um jogo baseado no assusnto
+         mais falado do momento, o <a href="https://pt.wikipedia.org/wiki/COVID-19" style="color:blue">COVID-19</a>. Depois de horas programando chegamos em um jogo que simula situações similares as que estamos passando. O jogador se reteem em controlar uma bacteria e infectar as demais pessoas na cidade, que por sua vez procuram os
+         hospitais para se desinfectar. O <a href="https://pt.wikipedia.org/wiki/COVID-19" style="color:blue">COVID-19</a> pode ser transmitido de varias formas(exemplos em <a href="https://www.youtube.com/watch?v=ebV2z4R0VWY" style="color:blue">video</a>) e nesse jogo tentamos representar uma delas, também procuramos representar
+         a efetividade dos hospitais por número e por localização, pois recentemente pessoas tem tido difícil acesso aos hospitais(exemplo de <a href="https://www.youtube.com/watch?v=LI8TxBEm66Y" style="color:blue">video</a>). Junto a simulção desenvolvemos gráficos para o monitoramento dos infectados, saudáveis e curados. Desenvolvemos 
+         também uma ferramenta para demosntrar a localização mais proxima de cada pessoa nas categorias citadas anteriormente. Ao final ficamos felizes com o resultado do trabalho foi muito gratificante trabalhar com meus parceiros de trabalho, agradeço a matéria de lip por proporcionar experiencias com essa.
+         <br><br>
+         Link para o projeto: <a href="https://www.slnova.org/bijorge/projects/755877/" style="color:blue">https://www.slnova.org/bijorge/projects/755877/</a>
+      </p>
+      <div class="w3-row">
+        <div class="w3-col m8 s12">
+        <!--  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>-->
+        </div>
+        <div class="w3-col m4 w3-hide-small">
+        <!--  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>-->
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  
 </div>
 
 <div class="w3-col l4">
