--- a/index.html
+++ b/index.html
@@ -66,7 +66,35 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
       </div>
     </div>
-  </div>  
+  </div>
+  
+  <div class="w3-card-4 w3-margin w3-white">
+    <img src="img/fafa.jpg" alt="Norway" style="width:100%">
+      <div class="w3-container">
+        <h3><b>Projeto Arduino e Tinkercad</b></h3>
+        <h5>Projeto sirene de glicose baixa, <span class="w3-opacity">03 de Julho de 2020</span></h5>
+      </div>
+      
+      <div class="w3-container">
+        <p>Após a mentoria de nosso querido professor Carlos (em conjunto com inspirações vindas do site <a href="https://www.tinkercad.com/" style="color:blue">Tinkercad</a>), fomos desafiados a criar um projeto híbrido codificado utilizando linguagem de blocos e linguagem alfanumérica. Aceitamos o desafio e caimos dentro para realizar a tarefa. Decidimos criar um projeto de utilidade publica, juntando o util ao agradavel.
+          Percebemos que um problema que causa muitos acidentes de transito e a queda de glicose, causando a <a href="https://pt.wikipedia.org/wiki/hipoglicemia" style="color:blue">hipoglicemia</a>. A <a href="https://pt.wikipedia.org/wiki/hipoglicemia" style="color:blue">hipoglicemia</a> pode causar a falta da resposta motora, causando acidentes de transito por falta de reflexo.
+          E esse problema poderia ser resolvido se algum orgão da saude monitorasse pessoas com a queda de glicose com certa re-incidencia. O projeto que desenvolvemos simula o que seria um equipamento de monitoramento da glicose, que quando seus niveis chegam a um estado critico, um sinal é enviado ao hospital, para que as medidas sejam tomadas (como enviar uma ambulancia, representada pelo terceiro arduino).
+          O funcionamento do projeto consiste em utilizar um <a href="https://pt.wikipedia.org/wiki/arduino" style="color:blue">Arduino</a> equipado com um <a href="https://pt.wikipedia.org/wiki/arduino" style="color:blue">potenciometro</a> para mandar os valores de glicose ao outro <a href="https://pt.wikipedia.org/wiki/arduino" style="color:blue">Arduino</a>, que por sua vez recebe os dados e ativa a sirene para avisar aos hospitais. Ao final ficamos felizes com o resultado do trabalho foi muito gratificante trabalhar com meus parceiros de trabalho, agradeço a matéria de lip por proporcionar experiencias com essa. 
+           <br><br>
+           Link para o projeto: <a href=" https://www.tinkercad.com/things/cEMv1oXTYMC " style="color:blue"> https://www.tinkercad.com/things/cEMv1oXTYMC </a>
+        </p>
+        <div class="w3-row">
+          <div class="w3-col m8 s12">
+          <!--  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>-->
+          </div>
+          <div class="w3-col m4 w3-hide-small">
+          <!--  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>-->
+          </div>
+        </div>
+      </div>
+    </div>  
+  
+  
 </div>
 
 <div class="w3-col l4">
