--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <hr>
 
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="img/2.jpg" alt="Norway" style="width:100%">
+    <img src="img/fasa.jpg" alt="Norway" style="width:100%">
       <div class="w3-container">
         <h3><b>Primeiro jogo</b></h3>
         <h5>Pong2 modificado, <span class="w3-opacity">07 de Abril de 2020</span></h5>
@@ -63,9 +63,32 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
       </div>
     </div>
+  
+  <div class="w3-card-4 w3-margin w3-white">
+    <img src="img/dada.jpg" alt="Norway" style="width:100%">
+      <div class="w3-container">
+        <h3><b>Curriculo Lattes</b></h3>
+        <h5>Curriculo, <span class="w3-opacity">10 de Abril de 2020</span></h5>
+      </div>
+      
+      <div class="w3-container">
+        <p>Fizemos um curriculo a pedido do professor Carlos, para demonstrar nossas capacidades 
+           <br><br>
+           Link para o projeto: <a href="https://www.slnova.org/bijorge/projects/755877/" style="color:blue">https://www.slnova.org/bijorge/projects/755877/</a>
+        </p>
+        <div class="w3-row">
+          <div class="w3-col m8 s12">
+          <!--  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>-->
+          </div>
+          <div class="w3-col m4 w3-hide-small">
+          <!--  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>-->
+          </div>
+        </div>
+      </div>
+    </div>
 
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="img/2.jpg" alt="Norway" style="width:100%">
+    <img src="img/gfa.jpg" alt="Norway" style="width:100%">
       <div class="w3-container">
         <h3><b>Jogo VEF</b></h3>
         <h5>Jogo final em equipe, <span class="w3-opacity">23 de Junho de 2020</span></h5>
