--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <div class="w3-container">
         <p>Desafio feito durante a aula de lip para fazer um jogo parecido com o pong2
            <br><br>
-           Link para o projeto: <a href="http://lattes.cnpq.br/2791859186256515" style="color:blue">http://lattes.cnpq.br/2791859186256515</a>
+           Link para o projeto: <a href="https://scratch.mit.edu/projects/403491749/" style="color:blue">https://scratch.mit.edu/projects/403491749/</a>
         </p>
         <div class="w3-row">
           <div class="w3-col m8 s12">
