--- a/index.html
+++ b/index.html
@@ -163,7 +163,45 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
           </div>
         </div>
       </div>
-    </div>  
+    </div>
+  
+  <div class="w3-card-4 w3-margin w3-white">
+      <img src="img/jaja.jpg" alt="Norway" style="width:100%">
+        <div class="w3-container">
+          <h3><b>Artigo - Proposta de Pesquisa Inicial</b></h3>
+          <h5>Pesquisa extensionista, <span class="w3-opacity">07 de Julho de 2020</span></h5>
+        </div>
+        
+        <div class="w3-container">
+          <p>Durante as aulas de LIP apresentadas pelo professor Carlos, fomos mentorados a fazer projetos para o aprendizada condizente a ciencia da computação. Com o passar do tempo, percebi
+            que esse era realmente um tema a ser tratado com certa seriedade, pois muitas pessoas poderiam se beneficiar com esse assunto. Durante este atipico semestre, utilizamos varias 
+            ferramentas para melhorar nossa habilidade e conhecimento sobre programação. Mas porque incentivar apenas pessoas com interesse em programação, quando estes programas podem atingir
+            proporções de ensino muito maior? Introduzir a plataforma Tinkercad em escolas de ensino médio/fundamental para auxiliar uma das materias mais odiadas das crianças e adolecentes, a
+            matematica, pode modificar o jeito em que elas veem essa materia. A plataforma Tinkercad em junção com as ferramentas de 3D printing, podem ajudar a junção do STEAM education para
+            tornar a materia mais dinamica. Poderiamos tambem introduzir a plataforma SCRATCH para crianças em formação para ajudar na formação de seu conhecimento, e ajuda-las em se tornar 
+            independentes na questão de resolver problemas apresentado a elas. A educação so tende a crescer com a adição dessas plataformas, e quem sairá ganhando são as nossas crianças e 
+            adolecentes com um futuro imenso pela frente.
+             <br><br>
+             Link para artigos usados para inspiração:
+             <br>
+             3D printing com STEAM education: <a href="https://link.springer.com/article/10.1007/s40751-017-0036-x" style="color:blue">Artigo 1</a>
+              / <a href="https://link.springer.com/article/10.1007%2Fs10956-018-9733-5" style="color:blue">Artigo 2</a>
+             <br>
+             aprendizado com SCRATCH: <a href="https://www.tandfonline.com/doi/abs/10.1080/08993408.2013.832022" style="color:blue">Artigo 1</a>
+             / <a href="https://lexitron.nectec.or.th/public/ICCE%202010%20Putrajaya%20Malaysia/ICCE2010%20Main%20Proceedings/c6/short%20paper/C6SP153.pdf" style="color:blue">Artigo 2</a>
+             <br>
+             Livro sobre aprendizado e jogos educacionais: <a href="https://books.google.com.br/books?id=DeKPDAAAQBAJ&pg=PA265&lpg=PA265&dq=Artigos+acad%C3%AAmicos+sobre+slnova+for+learning&source=bl&ots=wgTX1iTJdD&sig=ACfU3U1WoLUGZr49boc-w4m4gVfzBvkiSg&hl=pt-BR&sa=X&ved=2ahUKEwj_yvOxgL3qAhVGIbkGHVniCbMQ6AEwAHoECAcQAQ#v=onepage&q=Artigos%20acad%C3%AAmicos%20sobre%20slnova%20for%20learning&f=false" style="color:blue">Livro</a>
+          </p>
+          <div class="w3-row">
+            <div class="w3-col m8 s12">
+            <!--  <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>-->
+            </div>
+            <div class="w3-col m4 w3-hide-small">
+            <!--  <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>-->
+            </div>
+          </div>
+        </div>
+      </div>  
 
 
 </div>
