--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
         </div>
         
         <div class="w3-container">
-          <p>Durante as aulas de LIP apresentadas pelo professor Carlos, fomos mentorados a fazer projetos para o aprendizada condizente a ciencia da computação. Com o passar do tempo, percebi
+          <p>Durante as aulas de LIP apresentadas pelo professor Carlos, fomos mentorados a fazer projetos para o aprendizada condizente a <a href="https://pt.wikipedia.org/wiki/Ci%C3%AAncia_da_computa%C3%A7%C3%A3o" style="color:blue">ciencia da computação</a>. Com o passar do tempo, percebi
             que esse era realmente um tema a ser tratado com certa seriedade, pois muitas pessoas poderiam se beneficiar com esse assunto. Durante este atipico semestre, utilizamos varias 
-            ferramentas para melhorar nossa habilidade e conhecimento sobre programação. Mas porque incentivar apenas pessoas com interesse em programação, quando estes programas podem atingir
-            proporções de ensino muito maior? Introduzir a plataforma Tinkercad em escolas de ensino médio/fundamental para auxiliar uma das materias mais odiadas das crianças e adolecentes, a
-            matematica, pode modificar o jeito em que elas veem essa materia. A plataforma Tinkercad em junção com as ferramentas de 3D printing, podem ajudar a junção do STEAM education para
-            tornar a materia mais dinamica. Poderiamos tambem introduzir a plataforma SCRATCH para crianças em formação para ajudar na formação de seu conhecimento, e ajuda-las em se tornar 
+            ferramentas para melhorar nossa habilidade e conhecimento sobre a <a href="https://pt.wikipedia.org/wiki/Programa%C3%A7%C3%A3o_de_computadores" style="color:blue">programação</a>. Mas porque incentivar apenas pessoas com interesse em programação, quando estes programas podem atingir
+            proporções de ensino muito maior? Introduzir a plataforma <a href="https://www.tinkercad.com/" style="color:blue">Tinkercad</a> em escolas de ensino médio/fundamental para auxiliar uma das materias mais odiadas das crianças e adolecentes, a
+            matematica, pode modificar o jeito em que elas veem essa materia. A plataforma <a href="https://www.tinkercad.com/" style="color:blue">Tinkercad</a> em junção com as ferramentas de <a href="https://pt.wikipedia.org/wiki/Impress%C3%A3o_3D" style="color:blue">3D printing</a>, podem ajudar a junção do <a href="https://educationcloset.com/what-is-steam-education-in-k-12-schools/" style="color:blue">STEAM education</a> para
+            tornar a materia mais dinamica. Poderiamos tambem introduzir a plataforma <a href="https://scratch.mit.edu/" style="color:blue">SCRATCH</a> para crianças em formação para ajudar na formação de seu conhecimento, e ajuda-las em se tornar 
             independentes na questão de resolver problemas apresentado a elas. A educação so tende a crescer com a adição dessas plataformas, e quem sairá ganhando são as nossas crianças e 
             adolecentes com um futuro imenso pela frente.
              <br><br>
